// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField > handles user input correctly 1`] = `
<DocumentFragment>
  <fieldset
    class="fieldset"
  >
    <label
      class="label flex justify-between"
      for="username"
    >
      <span>
        Username
      </span>
    </label>
    <input
      aria-describedby="username-information"
      class="input rounded-md transition-all duration-100 min-h-fit h-10"
      id="username"
      name="username"
      value="John Doe"
    />
  </fieldset>
</DocumentFragment>
`;

exports[`TextField > has a label 1`] = `
<DocumentFragment>
  <fieldset
    class="fieldset"
  >
    <label
      class="label flex justify-between"
      for="username"
    >
      <span>
        Username
      </span>
    </label>
    <input
      aria-describedby="username-information"
      class="input rounded-md transition-all duration-100 min-h-fit h-10"
      id="username"
      name="username"
    />
  </fieldset>
</DocumentFragment>
`;

exports[`TextField > has an error text 1`] = `
<DocumentFragment>
  <fieldset
    class="fieldset"
  >
    <label
      class="label flex justify-between"
      for="username"
    >
      <span>
        Username
      </span>
    </label>
    <input
      aria-describedby="username-information"
      aria-invalid="true"
      class="input rounded-md transition-all duration-100 min-h-fit h-10"
      id="username"
      name="username"
    />
    <label
      class="label flex flex-col items-start"
      for="username"
      id="username-information"
    >
      <span
        class="text-red-500"
      >
        This is an error text
      </span>
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`TextField > has an info text 1`] = `
<DocumentFragment>
  <fieldset
    class="fieldset"
  >
    <label
      class="label flex justify-between"
      for="username"
    >
      <span>
        Username
      </span>
      <span>
        This is an info text
      </span>
    </label>
    <input
      aria-describedby="username-information"
      class="input rounded-md transition-all duration-100 min-h-fit h-10"
      id="username"
      name="username"
    />
  </fieldset>
</DocumentFragment>
`;

exports[`TextField > prevent user input when disabled 1`] = `
<DocumentFragment>
  <fieldset
    class="fieldset"
  >
    <label
      class="label flex justify-between"
      for="username"
    >
      <span>
        Username
      </span>
    </label>
    <input
      aria-describedby="username-information"
      class="input rounded-md transition-all duration-100 min-h-fit h-10"
      disabled=""
      id="username"
      name="username"
      value="John Doe"
    />
  </fieldset>
</DocumentFragment>
`;

exports[`TextField > renders with the correct initial state 1`] = `
<DocumentFragment>
  <fieldset
    class="fieldset"
  >
    <input
      aria-describedby="username-information"
      class="input rounded-md transition-all duration-100 min-h-fit h-10"
      id="username"
      name="username"
      value="John Doe"
    />
  </fieldset>
</DocumentFragment>
`;
